--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-#spring.datasource.url= jdbc:mysql://37.140.192.245:3306/u1950683_elysium?useSSL=false
-#spring.datasource.username= root
-#spring.datasource.password= 123456
-#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto= update
+spring.datasource.url=jdbc:mysql://37.140.192.245:3306/u1950683_elysium?useSSL=false
+spring.datasource.username=u1950683_root
+spring.datasource.password=holdmybeer
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
