--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# DAO setup
 spring.datasource.url=jdbc:mysql://37.140.192.245:3306/u1950683_elysium?useSSL=false
 spring.datasource.username=u1950683_root
 spring.datasource.password=holdmybeer
@@ -6,3 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+# Oauth setup
+spring.security.oauth2.client.registration.github.client-id=9d68cbf5795249cfab5c
+spring.security.oauth2.client.registration.github.client-secret=dc9ba7fa6e3b45dee9891db4b0bd6b775a3f26b9
