--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,11 @@ dependencies {
     implementation 'org.hibernate:hibernate-core:6.0.2.Final'
     implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
     implementation 'mysql:mysql-connector-java:8.0.32'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.3'
     implementation 'org.springframework.boot:spring-boot-starter-security:3.0.3'
     implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.0.3'
-    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
