--- a/ElysiumApp/app/src/main/AndroidManifest.xml
+++ b/ElysiumApp/app/src/main/AndroidManifest.xml
@@ -13,28 +13,32 @@
         android:theme="@style/Theme.ElysiumApp"
         tools:targetApi="31">
         <activity
-            android:name=".ui.RegistrationActivity"
-            android:exported="true">
+            android:name=".ui.activities.RegistrationActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.LoginActivity"
-            android:exported="true">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".ui.MainActivity"
-            android:exported="true">
+            android:name=".ui.activities.LoginActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.activities.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
