--- a/Elysium/build.gradle
+++ b/Elysium/build.gradle
@@ -24,6 +24,7 @@ test {
 }
 
 dependencies {
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.hibernate:hibernate-core:6.0.2.Final'
     implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
@@ -33,6 +34,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
 
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
