--- a/ElysiumApp/app/build.gradle
+++ b/ElysiumApp/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -48,8 +50,14 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.5.5'
 
     // Dagger Hilt
-    implementation "com.google.dagger:hilt-android:2.45"
-    annotationProcessor "com.google.dagger:hilt-compiler:2.45"
+    //implementation "com.google.dagger:hilt-android:2.44"
+    //annotationProcessor "com.google.dagger:hilt-compiler:2.44"
+//    annotationProcessor "com.google.dagger:hilt-android-compiler:2.44"
+    //implementation "androidx.hilt:hilt-compiler:1.0.0"
+  //  implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     // For instrumentation tests
     androidTestImplementation "com.google.dagger:hilt-android-testing:2.45"
@@ -58,4 +66,14 @@ dependencies {
     // For local unit tests
     testImplementation "com.google.dagger:hilt-android-testing:2.45"
     testAnnotationProcessor "com.google.dagger:hilt-compiler:2.45"
+
+    //OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+
+    //GJson
+    implementation 'com.google.code.gson:gson:2.8.9'
+}
+
+kapt {
+    correctErrorTypes true
 }
