--- a/ElysiumApp/app/src/main/AndroidManifest.xml
+++ b/ElysiumApp/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application
         android:usesCleartextTraffic="true"
-        android:name=".ui.ElysiumApplication"
+        android:name=".ElysiumApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
