--- a/ElysiumApp/app/build.gradle
+++ b/ElysiumApp/app/build.gradle
@@ -52,11 +52,6 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.5.5'
 
     // Dagger Hilt
-    //implementation "com.google.dagger:hilt-android:2.44"
-    //annotationProcessor "com.google.dagger:hilt-compiler:2.44"
-//    annotationProcessor "com.google.dagger:hilt-android-compiler:2.44"
-    //implementation "androidx.hilt:hilt-compiler:1.0.0"
-  //  implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-android-compiler:2.44"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
@@ -74,6 +69,24 @@ dependencies {
 
     //GJson
     implementation 'com.google.code.gson:gson:2.8.9'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // Firebase Firestore
+    implementation 'com.google.firebase:firebase-firestore:24.4.5'
+
+    // Firebase Storage KTX
+    implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
+
+    // Firebase Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
+
+    // ExoPlayer
+    api "com.google.android.exoplayer:exoplayer-core:2.18.5"
+    api "com.google.android.exoplayer:exoplayer-ui:2.18.5"
+    api "com.google.android.exoplayer:extension-mediasession:2.18.5"
 
     //Kotlin coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
