--- a/SpotifyCloneYT/app/build.gradle
+++ b/SpotifyCloneYT/app/build.gradle
@@ -96,4 +96,7 @@ dependencies {
     api "com.google.android.exoplayer:exoplayer-core:2.18.4"
     api "com.google.android.exoplayer:exoplayer-ui:2.18.4"
     api "com.google.android.exoplayer:extension-mediasession:2.18.4"
+
+    // Database
+    implementation 'mysql:mysql-connector-java:8.0.32'
 }
