--- a/ElysiumApp/app/src/main/AndroidManifest.xml
+++ b/ElysiumApp/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         tools:targetApi="31">
 
         <service android:name=".exoplayer.MusicService"
-            android:exported="true">
+            android:exported="true"
+            android:enabled="true">
             <intent-filter>
                 <action android:name="android.media.browse.MediaBrowserService" />
             </intent-filter>
