add callback to login & register func

--- a/ElysiumApp/app/build.gradle
+++ b/ElysiumApp/app/build.gradle
@@ -72,6 +72,11 @@ dependencies {
 
     //GJson
     implementation 'com.google.code.gson:gson:2.8.9'
+
+    //Kotlin coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+
 }
 
 kapt {
