--- a/Elysium/src/main/resources/application.properties
+++ b/Elysium/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## DAO setup
-#spring.datasource.url=jdbc:mysql://37.140.192.245:3306/u1950683_elysium?useSSL=false
-#spring.datasource.username=u1950683_root
-#spring.datasource.password=holdmybeer
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -9,5 +9,5 @@
 ##spring.jpa.hibernate.ddl-auto=update
 #
 ## Oauth setup
-#spring.security.oauth2.client.registration.github.client-id=9d68cbf5795249cfab5c
+#spring.security.oauth2.client.registration.github.client-id=
 #spring.security.oauth2.client.registration.github.client-secret=
